web/CSS/gwt/xviews/executionYear.css
/*
Not being used

.ExecutionYear-DetailPopup {
	position: absolute;
	opacity: 2.0;
	z-index: 101;
}


Not being used

.ExecutionYear-DetailPopup-Label {
	color: white;
	font-size: 120%;
	font-family: sans-serif;
	cursor: pointer;
	margin-top: 15px;
	margin-left: 10px;
	margin-bottom: 15px;
	margin-right: 10px;
}


Not being used

.ExecutionYear-DetailPopup-UpperLine {
	margin-left: 10px;
	text-align: left;
}


Not being used

.ExecutionYear-DetailPopup-LowerLine {
	margin-left: 10px;
}
*/

.ExecutionYear-Shader {
	position: fixed;
	top: 0px;
	left: 0px;
	width: 100%;
	height: 100%;
	background-color: black;
	
	/* for IE */
  	filter: alpha(opacity=60);
  	/* CSS3 standard */
  	opacity: 0.6;
  	
	z-index: 100;
}

.ExecutionYear-Overlay {
	position: absolute;
	top: 0px;
	left: 0px;
	width: 100%;
	height: 100%;
	z-index: 101;
}

/*.ExecutionYear-ClickableElement {
	cursor: pointer;
}

.ExecutionYear-InlineElements {
	display: inline;
}*/

.ExecutionYear-SingleClickableLabel {
	cursor: pointer;
	margin: 5px;
	font-size:120%;
	font-weight: bold;
}
.ExecutionYear-SingleClickableIcon {
	cursor: pointer;
	margin: 5px;
}

.ExecutionYear-CourseTitleLabel {
	font-size:140%;
	font-weight: bold;
}

.ExecutionYear-BackIcon {
	margin: 5px;
}

.ExecutionYear-CourseListItem {
	cursor: pointer;
	font-family: Helvetica;
	font-size: 110%;
	margin-right: 20px;
	display: inline;
}

.ExecutionYear-TermTags {
	font-size: 130%;
	font-family: Helvetica;
	width: 100px;
	height: 50px;
}

.ExecutionYear-YearTags {
	font-size: 130%;
	font-family: Helvetica;
	font-weight: bold;
	width: 120px;
}

.ExecutionYear-GridSeparator {
	height: 50px;
}

.ExecutionYear-CoursesListIcons {
	cursor: pointer;
	width: 20px;
	height: 20px;
	vertical-align: middle;
}

.ExecutionYear-ProblematicCoursesTitle {
	font-size: 180%;
	font-family: "Helvetica";
	font-weight: bold;
}

.ExecutionYear-CourseAnalysisPanel {
	margin-left: 65px;
	border-style: dotted;
	border-width: 2px;
	border-color: #143541;
}

.ExecutionYear-CourseWidgetTitleCell {
	width: 450px;
	height: 80px;
	font-size: 150%;
	font-family: "Helvetica";
	
	text-align: center;
	vertical-align: bottom;
}

.ExecutionYear-CourseWidgetCell {
	width: 450px;
	padding-left: 40px;
}

.ExecutionYear-CourseTitleCell {
	margin-left: 15px;
}

.ExecutiveYear-CourseTitleUnderlying {
	border-top-style: dotted;
	border-top-width: 2px;
	border-top-color: #143541;
	
	border-right-style: dotted;
	border-right-width: 2px;
	border-right-color: #143541;
}

.ExecutiveYear-MultiChoiceSwitcher {
	margin-left: 125px;
	margin-top: 40px;
	margin-bottom: 10px;
}

